v0.11.1/_sources/generated/statsmodels.tsa.ar_model.AutoRegResults.rst.txt
statsmodels.tsa.ar\_model.AutoRegResults
========================================

.. currentmodule:: statsmodels.tsa.ar_model

.. autoclass:: AutoRegResults
   :exclude-members:

   
   
   .. rubric:: Methods

   .. autosummary::
      :toctree:

      ~AutoRegResults.conf_int
      ~AutoRegResults.cov_params
      ~AutoRegResults.diagnostic_summary
      ~AutoRegResults.f_test
      ~AutoRegResults.initialize
      ~AutoRegResults.load
      ~AutoRegResults.normalized_cov_params
      ~AutoRegResults.plot_diagnostics
      ~AutoRegResults.plot_predict
      ~AutoRegResults.predict
      ~AutoRegResults.remove_data
      ~AutoRegResults.save
      ~AutoRegResults.scale
      ~AutoRegResults.sigma2
      ~AutoRegResults.summary
      ~AutoRegResults.t_test
      ~AutoRegResults.t_test_pairwise
      ~AutoRegResults.test_heteroskedasticity
      ~AutoRegResults.test_normality
      ~AutoRegResults.test_serial_correlation
      ~AutoRegResults.wald_test
      ~AutoRegResults.wald_test_terms
   
   
   
   
   
   .. rubric:: Properties

   .. autosummary::
      :toctree:

      ~AutoRegResults.aic
      ~AutoRegResults.ar_lags
      ~AutoRegResults.arfreq
      ~AutoRegResults.bic
      ~AutoRegResults.bse
      ~AutoRegResults.df_model
      ~AutoRegResults.df_resid
      ~AutoRegResults.fittedvalues
      ~AutoRegResults.fpe
      ~AutoRegResults.hqic
      ~AutoRegResults.llf
      ~AutoRegResults.nobs
      ~AutoRegResults.params
      ~AutoRegResults.pvalues
      ~AutoRegResults.resid
      ~AutoRegResults.roots
      ~AutoRegResults.tvalues
      ~AutoRegResults.use_t
   
   
   